--- a/0.Demo/index.html
+++ b/0.Demo/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Add to Num</h1>
-    <input type="Number" id="num1">
-    <input type="Number" id="num2">
-    <Button id="btn">Add</Button>
-</body>
+    <input type="Number" id="num1" />
+    <input type="Number" id="num2" />
+    <button id="btn">Add</button>
+  </body>
 </html>
-<script src="index.ts"></script>
+<script src="index.js"></script>
