--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="app.js" defer></script>
+    <script src="./dist/app.js" defer></script>
+    <script src="./dist/analytics.js" defer></script>
   </head>
-  <body></body>
+  <body>
+
+    <button>Click</button>
+  </body>
 </html>
+
+<!-- 
+  tsc -w
+  tsc --init
+
+-->
